# BookStore-Rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: Rust手順書20260426.md  Rust簡易仕様書.md  開発方法.md
docs/Steps/: Step1.md  Step10.md  Step11.md  Step12.md  Step2.md  Step3.md  Step4.md  Step5.md  Step6.md  Step7.md  Step8.md  Step9.md
migrations/: init.sql
src/: main.rs  models.rs  templates.rs
templates/: customers.html  index.html  products.html  sales-create.html  sales-detail.html  sales.html
